test/e2e/testdata/tcproute-mtls.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tcp-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: tcp-gateway-settings
  listeners:
    - name: tcp
      protocol: TCP
      port: 8090
      allowedRoutes:
        kinds:
          - kind: TCPRoute
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: tcp-gateway-settings
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  backendTLS:
    clientCertificateRef:
      kind: Secret
      name: "client-tls-certificate"
---
# This is used as the client certificate for the envoy to connect to the backend service
# openssl req -out envoy.csr -newkey rsa:2048 -nodes -keyout envoy.key -subj "/CN=envoy/O=example organization"
# openssl x509 -req -days 36500 -CA ca.crt -CAkey ca.key -set_serial 0 -in envoy.csr -out envoy.crt
apiVersion: v1
kind: Secret
metadata:
  name: client-tls-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHekNDQWdPZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREF0TVJVd0V3WURWUVFLREF4bGVHRnQKY0d4bElFbHVZeTR4RkRBU0JnTlZCQU1NQzJWNFlXMXdiR1V1WTI5dE1DQVhEVEkxTVRBeE16QTJNekV4T0ZvWQpEekl4TWpVd09URTVNRFl6TVRFNFdqQXZNUTR3REFZRFZRUUREQVZsYm5admVURWRNQnNHQTFVRUNnd1VaWGhoCmJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUIKQVFDd0ViQ3FYb1BtT0NBYTRVYmxrcE80eHRFMDUwSXM3ZHgvbDlrY3lpRDA5SmU0L0t0L0RPdENjeTYybXVTUAp6N2ZtR3EwTktOdGU3a [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ3dFYkNxWG9QbU9DQWEKNFVibGtwTzR4dEUwNTBJczdkeC9sOWtjeWlEMDlKZTQvS3QvRE90Q2N5NjJtdVNQejdmbUdxME5LTnRlN2loUApMZjViVTNCVFVUZHRZTmU1cFp1U0xCb0JDVVRlYTM2R3NUd1d5N0FtWDFRUjZhckxHRFlQcy95NTFlN1hPYU92ClBObHYzRXFNRHNpSjJTQ21KaTJXU0FlcG11K0xDK0d6cEpEVnhneDBhdXR2NUh5bFVySm9ySjhacXdDT0tvUnQKY2RCalIxenNON0lnMlVYWm4waW1TNTZsQ21BSDlhVGltRkVuSjlLdkR3clREY1dNRk1wOUFuYjJQS25CZjFmWQoxTnVVNXpwek9oaGQ3U [...]
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tcp-gateway
  rules:
    - backendRefs:
        - name: tls-backend-2
          port: 443
---
apiVersion: v1
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDQzCCAiugAwIBAgIBATANBgkqhkiG9w0BAQsFADBCMRMwEQYDVQQKEwpFbnZv
[...]
    S5EAolzVv0yB7wHCWCgfG/ckdOTUNnE=
    -----END CERTIFICATE-----
kind: ConfigMap
metadata:
  name: backend-tls-ca
  namespace: gateway-conformance-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: tls-backend-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: tls-backend-2
      sectionName: https
  validation:
    caCertificateRefs:
      - name: backend-tls-ca
        group: ""
        kind: ConfigMap
    hostname: example.com
